Added swagger docs for printer
