# backend/docs/swagger.json
@@ -16,6 +16,171 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/printer": {
+            "get": {
+                "description": "get printer data by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "printers"
+                ],
+                "summary": "show the data for printer",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Printer Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Printer"
+                        }
+                    },
+                    "404": {
+                        "description": "Printer not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "create a new printer object",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "printer"
+                ],
+                "summary": "add a new printer to the DB",
+                "parameters": [
+                    {
+                        "description": "Printer Data",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Printer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Printer"
+                        }
+                    },
+                    "500": {
+                        "description": "Error with input",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a printer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "printer"
+                ],
+                "summary": "Delete a user's printer",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Printer Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Printer deleted",
+                        "schema": {
+                            "$ref": "#/definitions/model.Printer"
+                        }
+                    },
+                    "404": {
+                        "description": "Printer not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/printer/{id}": {
+            "patch": {
+                "description": "Updates a printer data",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "printer"
+                ],
+                "summary": "Updates a user's printer info",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Printer Id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Printer Data",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Printer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Printer updated",
+                        "schema": {
+                            "$ref": "#/definitions/model.Printer"
+                        }
+                    },
+                    "404": {
+                        "description": "Printer not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Error with input",
+                        "schema": {
+                            "$ref": "#/definitions/response.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user": {
             "post": {
                 "description": "create a new user",
@@ -192,6 +357,57 @@
                 "valid": {
                     "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
+                }
+            }
+        },
+        "model.Printer": {
+            "type": "object",
+            "properties": {
+                "board": {
+                    "type": "string"
+                },
+                "brand": {
+                    "type": "string"
+                },
+                "buildVolume": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "extruder": {
+                    "type": "string"
+                },
+                "hotend": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "mods": {
+                    "description": "REVIEW: should be a k/v nested obj instead of a str",
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nozzle": {
+                    "type": "integer"
+                },
+                "powerSupply": {
+                    "type": "string"
+                },
+                "probe": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "user": {
+                    "type": "string"
                 }
             }
         },
